--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  box-sizing: border-box;
 }
 #root{
   height: 100%;
@@ -14,4 +15,7 @@ body {
 }
 .formBackgorund {
   background-color: #59405c,
+}
+.animate__animated.animate__fadeOut {
+  --animate-delay: 3s;
 }
